# local_telegram_rag_llm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_all.py  run_client.py  run_models.py  run_server.py
scripts/: download_models.ps1  download_models.sh  start_all.sh  start_client.ps1  start_client.sh  start_server.ps1  start_server.sh
src/: __init__.py  app.py  config.py  ingest.py  llm_engine.py  model_downloader.py  qdrant_setup.py  retrieval.py
tests/: test_ingest_logic.py  test_integration_pipeline.py  test_retrieval.py
